# mark-claw

./: .cwft-ai-manifest.json  .cwft-settings.yaml  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  common-developer.md  common-quality-reviewer.md  debugger.md  technical-writer.md
.claude/commands/: stack-check.md
.claude/conventions/: CLAUDE.md  REGISTRY.yaml  diff-format.md  documentation.md  severity.md  temporal.md
.claude/conventions/code-quality/: 02-structure-and-composition.md  09-correctness-security.md  CLAUDE.md  README.md
.claude/skills/common-worktree/: SKILL.md
.claude/skills/no-review-change/: SKILL.md
.claude/skills/phase/: SKILL.md
.claude/skills/stack-check/: SKILL.md
.cursor/rules/: common-workflow.mdc
.github/workflows/: canary.yml
docs/: SECRETS.md
docs/examples/: accounts.example.yaml  exclusions.example.yaml  local-whitelist.example.yaml  settings.example.yaml  sources.example.yaml
mclaw_core/: __init__.py  auth.py  cli.py  config_state.py  doctor.py  exclusion.py  fetch.py  output_guard.py  paths.py  secret.py
prompts/: README.md
specs/: MARK-CLAW-DESIGN.md  MARK-CLAW-SPEC.md  MARK-CLAW-TOOLS.md  PROMPTS.md  STACK-CLEANUP-NOTES.md  WORKFLOW.md
specs/plans/: PHASE-1-PLAN.md
tests/canary/: __init__.py  test_exclusion_canary.py
tests/hygiene/: test_hygiene.py
tests/unit/: test_auth.py  test_cli.py  test_config_state.py  test_deny_list.py  test_exclusion.py  test_fetch_base.py  test_output_guard.py  test_paths.py  test_secret.py
