[project]
name = "mark-claw"
version = "0.1.0"
description = "Tooling layer for the mark-claw personal AI assistant system (no personal data, no secrets)."
requires-python = ">=3.12"
# Runtime surface is stdlib + PyYAML (config parsing — Python ships no stdlib
# YAML). The dependency-allowlist + framework deny-list test
# (tests/unit/test_deny_list.py) guards this minimal surface against
# agent-runtime packages per MARK-CLAW-TOOLS.md §12.
dependencies = ["pyyaml>=6.0", "telethon>=1.44"]

[project.scripts]
mclaw = "mclaw_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mclaw_core"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["mclaw_core", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
# Tests use pytest fixtures/monkeypatch that don't need full strictness.
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "yaml"
# PyYAML's bundled type info varies by install; treat as best-effort. The
# doctor's own parsing narrows the result (isinstance(data, dict)) before use.
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "telethon.*"
# Telethon 1.44 does not ship PEP 561 type metadata; its narrow boundary is
# covered by mocked unit tests and all session values stay inside auth.py.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
